[package]
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
description = "Safely split a mutable slice in multiple threads at the same time."
documentation = "https://docs.rs/sync-splitter"
homepage = "https://github.com/cristicbz/sync-splitter"
keywords = [
    "parallel",
    "sync",
    "split",
    "slice",
    "tree",
]
license = "MIT/Apache-2.0"
name = "sync_splitter"
readme = "README.md"
repository = "https://github.com/cristicbz/sync-splitter"
version = "0.4.1"

[dev-dependencies]
rayon = "0.8.2"
